--- a/cadastro.html
+++ b/cadastro.html
@@ -9,7 +9,7 @@
 <body>
     <div class="cadastro-container">
         <h2>Cadastro de Usuário</h2>
-        <form action="cadastro.php" method="post">
+        <form action="/cadastro" method="post">
             <input type="text" name="nome" placeholder="Nome" required>
             <input type="email" name="email" placeholder="E-mail" required>
             <button type="submit">Cadastrar</button>
